--- a/functions/package.json
+++ b/functions/package.json
@@ -1,31 +1,25 @@
 {
-  "name": "medium-sonseans-bot",
+  "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "start": "node ./bin/web"
+    "lint": "eslint .",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
-  "version": "0.0.0",
-  "private": true,
   "engines": {
     "node": "8"
   },
-  "main": "lib/index.js",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1",
-    "telegraf": "^3.38.0",
-    "telegram-bot-api": "^1.3.4",
-    "body-parser": "~1.16.0",
-    "node-telegram-bot-api": "^0.21.1",
-    "got": "^6.3.0",
-    "cheerio": "^0.22.0"
+    "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "firebase-functions-test": "^0.2.0",
-    "tslint": "^5.12.0",
-    "typescript": "^3.8.0"
+    "eslint": "^5.12.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "firebase-functions-test": "^0.2.0"
   },
-  "token": "1236616273:AAHVe18oSPtsyS6UWWLnssPrNkRDF_-aBZI"
+  "private": true
 }
