--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "firebase": "^3.8.0",
     "firebase-admin": "^8.12.1",
     "got": "^6.3.0",
-    "node-telegram-bot-api": "^0.21.1"
+    "node-telegram-bot-api": "^0.21.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
   },
   "token": "1236616273:AAHVe18oSPtsyS6UWWLnssPrNkRDF_-aBZI"
 }
