--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^3.8.0",
     "firebase-admin": "^8.12.1",
     "got": "^6.3.0",
+    "nightmare": "^3.0.2",
     "node-telegram-bot-api": "^0.21.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
