--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "got": "^6.3.0",
     "nightmare": "^3.0.2",
     "node-telegram-bot-api": "^0.21.1",
+    "puppeteer": "^5.1.0",
     "puppeteer-core": "^5.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
