--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "sonseanstest",
+  "name": "sonseans",
   "version": "1.0.0",
+  "description": "",
   "private": true,
   "scripts": {
     "start": "node ./bin/web"
@@ -15,33 +16,9 @@
     "firebase": "^3.8.0",
     "firebase-admin": "^8.12.1",
     "got": "^6.3.0",
-    "nightmare": "^3.0.2",
     "node-telegram-bot-api": "^0.21.1",
-    "puppeteer-core": "^5.0.0",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5",
-    "require": "^2.4.20",
-    "xvfb": "^0.4.0"
+    "request-promise": "^4.2.5"
   },
-  "token": "1128740447:AAF-W8aLzMUBWoagsLHjKyJ1osNL3KEBrTQ",
-  "devDependencies": {
-    "@types/node": "^14.0.14"
-  },
-  "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "outDir": "dist",
-    "sourceMap": true,
-    "types": [
-      "node"
-    ]
-  },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
-  "main": "sonseans.js",
-  "description": ""
+  "token": "1128740447:AAF-W8aLzMUBWoagsLHjKyJ1osNL3KEBrTQ"
 }
